--- a/AutoMoney.Client/App.config
+++ b/AutoMoney.Client/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="AutoMoney.Client.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -31,6 +31,26 @@
             <setting name="Tistory_BlogName" serializeAs="String">
                 <value />
             </setting>
+            <setting name="Window_Point" serializeAs="String">
+                <value>0,0</value>
+            </setting>
+            <setting name="Window_Size" serializeAs="String">
+                <value>0,0</value>
+            </setting>
+            <setting name="Window_State" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="Window_IsFirst" serializeAs="String">
+                <value>False</value>
+            </setting>
         </AutoMoney.Client.Properties.Settings>
     </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Xceed.Wpf.Toolkit" publicKeyToken="3e4669d2f30244f4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
