--- a/AutoMoney.Client/packages.config
+++ b/AutoMoney.Client/packages.config
@@ -5,7 +5,13 @@
   <package id="CefSharp.Common" version="96.0.180" targetFramework="net472" />
   <package id="CefSharp.Wpf" version="96.0.180" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
+  <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.4" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.3.0" targetFramework="net472" />
+  <package id="Moka" version="1.0.0.5" targetFramework="net472" />
+  <package id="MongoDB.Bson" version="2.14.1" targetFramework="net472" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
 </packages>
